# pf2_market

./: .dockerignore  .gitignore  README.md  dockerfile  package-lock.json  package.json  pyproject.toml
config/: settings.py  urls.py
market/: adapters.py  admin.py  forms.py  middleware.py  models.py  urls.py  utils.py  validators.py  views.py
market/migrations/: 0001_initial.py  0002_user_nickname.py  0003_user_address.py  0004_alter_user_nickname.py  0005_postitem.py  0006_user_city.py  0007_alter_postitem_item_image1_and_more.py  0008_alter_postitem_item_condition_and_more.py  0009_alter_postitem_item_detail.py  0010_postitem_is_sold.py  0011_user_intro_user_profile_pic.py  0012_user_seller_rating.py  0013_alter_user_profile_pic.py  0014_comment.py  0015_like.py  0016_alter_like_author.py  0017_alter_comment_options_alter_postitem_options_and_more.py
market/static/market/css/: input.css
market/static/market/js/: main.js
market/tailwind/: input.css
market/templates/account/: email_confirmation_done.html  email_confirmation_required.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
market/templates/market/: email_confirmation_done.html  index.html  item_confirm_delete.html  item_detail.html  item_form.html  profile.html  profile_set_form.html  profile_update_form.html  user_item_list.html
market/templates/market_base/: base.html  base_with_header.html  base_with_navbar.html
market/templatetags/: market_extras.py
(+9 files in other folders)
