[project]
name = "pf2-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "django>=5.2.8",
    "django-allauth[socialaccount]>=65.13.0",
    "django-braces>=1.17.0",
    "django-seed>=0.3.1",
    "django-widget-tweaks>=1.5.0",
    "ipython>=9.7.0",
    "pillow>=12.0.0",
]
